force-app/main/default/objects/Process_Template__c/Process_Template__c.object-meta.xml
<CustomObject>
    <label>Process Template</label>
    <nameField>
        <label>Process Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>