force-app/main/default/objects/Process_Template__c/fields/Can_Start_Process__c.field-meta.xml
<CustomField>
    <fullName>Can_Start_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Start Process?</label>
    <type>Checkbox</type>
</CustomField>