force-app/main/default/objects/Process_Template__c/fields/Due_In_Units__c.field-meta.xml
<CustomField>
    <fullName>Due_In_Units__c</fullName>
    <label>Due In Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>