force-app/main/default/objects/Process_Template__c/fields/Due_In_Value__c.field-meta.xml
<CustomField>
    <fullName>Due_In_Value__c</fullName>
    <label>Due In Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>