force-app/main/default/objects/Process_Template__c/fields/ParentProcessTemplateId__c.field-meta.xml
<CustomField>
    <fullName>ParentProcessTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentProcessTemplateId</label>
    <referenceTo>Process_Template__c</referenceTo>
    <relationshipLabel>Process Templates</relationshipLabel>
    <relationshipName>Process_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>