force-app/main/default/objects/Process_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>ParentProcessTemplateId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>